# fine-tune-llm

./: pyproject.toml  requrements.txt
notebooks/: data_cleaning.ipynb
